alteração nas rotas de notificação
